spacing fix

--- a/css/main.css
+++ b/css/main.css
@@ -139,6 +139,10 @@ body * {
     margin: 0 auto;
 }
 
+.reveal .inline-block--logos {
+    max-width: none;
+}
+
 .inline-block img {
     width: 40%;
 }
